<resources>
    <string name="app_name">Tales of</string>
    <string name="UserName">UserName</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Edad">Age</string>
    <string name="Usuario">User</string>
    <string name="Mail">Email</string>
    <string name="Contrasena">Password</string>
    <string name="Años">Age</string>
    <string name="Acceso">Access</string>
    <string name="Borrar">Delete</string>
    <string name="Registrar">Register new account</string>
    <string name="userError">User no puede estar vacio</string>
    <string name="passError">Debe haber contraseña</string>
    <string name="dialog_message">¿Seguro que quiere borrar el usuario?</string>
    <string name="dialog_title">Confirmar</string>
    <string name="ok">SI</string>
    <string name="not">NO</string>
    <string name="cancel">Cancelar</string>
    <string name="Game">Game Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
