<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:title="Perfil"
        android:background="@color/red">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/UserName"
        style="@style/Labels"
    />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:inputType="text"
        />
    <TextView
        android:text="@string/Email"
        style="@style/Labels"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Mail"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:text="@string/Password"
        style="@style/Labels" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hombre"
                    />
                <RadioButton
                    android:id="@+id/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mujer"
                    />
            </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >
        <TextView
            android:text="@string/Edad"
            style="@style/Labels" />
        <EditText
            android:id="@+id/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Años"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/Access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:onClick="Guardar"
            android:text="@string/Acceso" />
        <Button
            android:id="@+id/Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:onClick="Borrar"
            android:text="@string/Borrar" />
    </LinearLayout>
</LinearLayout>