<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:id="@+id/login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Formulario"
        android:background="@color/red">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_below="@+id/my_toolbar"
        android:id="@+id/textUser"
        android:text="@string/UserName"
        style="@style/Labels"
        />
    <EditText
        android:layout_below="@+id/textUser"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:inputType="text"
        />
    <TextView
        android:layout_below="@+id/username"
        android:id="@+id/textPass"
        android:text="@string/Password"
        style="@style/Labels"
        />
    <EditText
        android:layout_below="@+id/textPass"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        />
    <Button
        android:layout_below="@+id/password"
        android:id="@+id/Access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:onClick="toLogin"
        android:text="@string/Acceso"
        />
    <Button
        android:layout_alignBottom="@+id/Access"
        android:layout_toEndOf="@+id/Access"
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:onClick="toCancel"
        android:text="@string/Borrar"
        />
    <Button
        android:id="@+id/New"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="toRegister"
        android:text="@string/Registrar"
        />
</RelativeLayout>